# ZabotaTestTaskBot

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/: app.py  loader.py
src/data/: config.py
src/data/dto/: message_dto.py
src/database/: core.py
src/database/migrations/: env.py
src/database/migrations/versions/: f8a05cfc3b86_init_migration.py
src/database/models/: __init__.py  message_model.py
src/database/repositories/: __init__.py  base.py  message_repository.py
src/handlers/: __init__.py
src/handlers/user/base/: __init__.py  message.py  new_request.py
src/handlers/user/commands/: __init__.py  help.py  start.py
src/services/: ai_service.py  message_service.py  services_factory.py
src/utils/: logs.py  set_commands.py  unit_of_work.py
src/utils/middleware/: services_middleware.py
